Fix css whitespace issue for pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.panelPage{
+    white-space: normal;
+}
+
 .ui-draggable-dragging{
     background-color: white !important;
     list-style: none;
